--- a/MVVM.csproj
+++ b/MVVM.csproj
@@ -49,8 +49,11 @@
     <Compile Include="Converters\BoolToVisibilityConverter.cs" />
     <Compile Include="Converters\EnumToBoolConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\RelayCommand.cs" />
-    <Compile Include="Services\WindowManager.cs" />
+    <Compile Include="Services\ServiceCache.cs" />
+    <Compile Include="Services\IService.cs" />
+    <Compile Include="Services\Controls\RelayCommand.cs" />
+    <Compile Include="Services\ServiceLocator.cs" />
+    <Compile Include="Services\Controls\WindowManager.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
   </ItemGroup>
   <ItemGroup />
